// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionList styles style params color brand 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_brand css-e2m2qr-QxSelectionList-root"
    data-testid="testStyleParams-color-brand"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_checked QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-1ogm3lm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1ek8x1f-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-1k86zaw-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params color danger 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_danger css-e2m2qr-QxSelectionList-root"
    data-testid="testStyleParams-color-danger"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_danger QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_danger QxRadioButton_position_left css-rx243e-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_danger QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_danger QxRadioButton_checked QxRadioButton_position_left css-rx243e-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-1ogm3lm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-p8zbir-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_danger QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_danger QxRadioButton_disabled QxRadioButton_position_left css-4e3dll-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_danger QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_danger QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-4e3dll-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-pd88xn-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params color info 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_info css-e2m2qr-QxSelectionList-root"
    data-testid="testStyleParams-color-info"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_info QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_info QxRadioButton_position_left css-1cw23df-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_info QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_info QxRadioButton_checked QxRadioButton_position_left css-1cw23df-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-1ogm3lm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1w7ghue-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_info QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_info QxRadioButton_disabled QxRadioButton_position_left css-ajzftk-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_info QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_info QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-ajzftk-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-impx9l-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params color secondary 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_secondary css-e2m2qr-QxSelectionList-root"
    data-testid="testStyleParams-color-secondary"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_secondary QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_secondary QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_secondary QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_secondary QxRadioButton_checked QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-1ogm3lm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1h3u4n5-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_secondary QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_secondary QxRadioButton_disabled QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_secondary QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_secondary QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-15khtkb-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params color success 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_success css-e2m2qr-QxSelectionList-root"
    data-testid="testStyleParams-color-success"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_success QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_success QxRadioButton_position_left css-1fv4f3x-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_success QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_success QxRadioButton_checked QxRadioButton_position_left css-1fv4f3x-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-1ogm3lm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1v1zw09-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_success QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_success QxRadioButton_disabled QxRadioButton_position_left css-82z6ob-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_success QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_success QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-82z6ob-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-1tky4zl-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params color warning 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_warning css-e2m2qr-QxSelectionList-root"
    data-testid="testStyleParams-color-warning"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_warning QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_warning QxRadioButton_position_left css-cyehzm-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_warning QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_warning QxRadioButton_checked QxRadioButton_position_left css-cyehzm-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-1ogm3lm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-6o83hc-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_warning QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_warning QxRadioButton_disabled QxRadioButton_position_left css-13a57ro-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_warning QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_warning QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-13a57ro-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-9idl3c-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params size large 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_large QxSelectionList_color_brand css-e2m2qr-QxSelectionList-root"
    data-testid="testStyleParams-size-large"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_large css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-18fr50e-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_large QxRadioButton_color_brand QxRadioButton_position_left css-1w9qhgk-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-5v7g2q-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_large css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-18fr50e-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_large QxRadioButton_color_brand QxRadioButton_checked QxRadioButton_position_left css-1w9qhgk-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-1ogm3lm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1ek8x1f-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-5v7g2q-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_large css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-18fr50e-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_large QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-1dl336u-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-lubd9c-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_large css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-18fr50e-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_large QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1dl336u-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-1k86zaw-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-lubd9c-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params size medium 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_brand css-e2m2qr-QxSelectionList-root"
    data-testid="testStyleParams-size-medium"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_checked QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-1ogm3lm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1ek8x1f-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-1k86zaw-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params size small 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_small QxSelectionList_color_brand css-e2m2qr-QxSelectionList-root"
    data-testid="testStyleParams-size-small"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_small css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-4fgvbz-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_small QxRadioButton_color_brand QxRadioButton_position_left css-1xfxno3-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-2pifnp-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_small css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-4fgvbz-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_small QxRadioButton_color_brand QxRadioButton_checked QxRadioButton_position_left css-1xfxno3-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-1ogm3lm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1ek8x1f-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-2pifnp-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_small css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-4fgvbz-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_small QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-174uosk-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-tkerft-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_small css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-4fgvbz-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_small QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-174uosk-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-1k86zaw-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-tkerft-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params type contained 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_contained QxSelectionList_size_medium QxSelectionList_color_brand css-1ksv9kq-QxSelectionList-root"
    data-testid="testStyleParams-type-contained"
  >
    <label
      class="QxSelection QxSelection_type_contained QxSelection_color_brand QxSelection_size_medium css-nnunrm-QxSelection-root"
      tabindex="0"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disableFocus QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              tabindex="-1"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_contained QxSelection_color_brand QxSelection_size_medium css-nnunrm-QxSelection-root"
      tabindex="0"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disableFocus QxRadioButton_checked QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              tabindex="-1"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1ek8x1f-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_contained QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-1jurm3z-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disableFocus QxRadioButton_disabled QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="-1"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_contained QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-1jurm3z-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disableFocus QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="-1"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-1k86zaw-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`SelectionList styles style params type text 1`] = `
<DocumentFragment>
  <div
    class="QxSelectionList QxSelectionList_type_text QxSelectionList_size_medium QxSelectionList_color_brand css-e2m2qr-QxSelectionList-root"
    data-testid="testStyleParams-type-text"
  >
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-1ns4etm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="0"
            />
            <div
              class="QxRadioButton-marker css-iaa1s8-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            Node
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_color_brand QxSelection_size_medium css-xzgqft-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_checked QxRadioButton_position_left css-1aifzti-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-1ogm3lm-QxRadioButton-input"
              tabindex="0"
              type="radio"
              value="1"
            />
            <div
              class="QxRadioButton-marker css-1ek8x1f-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-64r0g0-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-1px6wum-QxSelection-title"
          >
            EnabledNode
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
          >
            <input
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="2"
            />
            <div
              class="QxRadioButton-marker css-17vy97n-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledText
          </span>
        </div>
      </div>
    </label>
    <label
      class="QxSelection QxSelection_type_text QxSelection_disabled QxSelection_color_brand QxSelection_size_medium css-r7xesu-QxSelection-root"
      tabindex="-1"
    >
      <div
        class="QxSelection-content css-a7yohm-QxSelection-content"
      >
        <div
          class="QxSelection-controller css-ucexof-QxSelection-controller"
        >
          <label
            class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_checked QxRadioButton_position_left css-1md3zxc-QxRadioButton-root"
          >
            <input
              checked=""
              class="QxRadioButton-input css-pfwam-QxRadioButton-input"
              disabled=""
              tabindex="0"
              type="radio"
              value="3"
            />
            <div
              class="QxRadioButton-marker css-1k86zaw-QxRadioButton-marker"
            >
              <div
                class="QxRadioButton-markerDot css-lpcqb1-QxRadioButton-markerDot"
              />
            </div>
          </label>
        </div>
        <div
          class="QxSelection-texts css-zluihr-QxSelection-texts"
        >
          <span
            class="QxSelection-title css-wx7cwf-QxSelection-title"
          >
            DisabledCheckedText
          </span>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;
